# bzmag_new

./: CMakeLists.txt  Readme.txt  build.txt
examples/: PMSM.json  Transformer.json
examples/python/: Example.py  PMSM.py
src/bzmagEditor/: AboutDialog.h  AddExpressionDialog.cc  AddExpressionDialog.h  ArcInputDialog.cc  ArcInputDialog.h  AxisObject.cc  AxisObject.h  BooleanInputDialog.cc  BooleanInputDialog.h  CMakeLists.txt  CSInputDialog.cc  CSInputDialog.h  Camera.h  ChartDialog.cc  ChartDialog.h  CircleInputDialog.cc  CircleInputDialog.h  CircularProgressBar.h  CoilInputDialog.cc  CoilInputDialog.h  ConstraintEvaluator.cc  ConstraintEvaluator.h  DataInputDialog.cc  DataInputDialog.h  DrawingObject.cc  DrawingObject.h  ExpressionDialog.cc  ExpressionDialog.h  ExpressionTableModel.cc  ExpressionTableModel.h  FixedBCInputDialog.cc  FixedBCInputDialog.h  Flat3DShader.cc  Flat3DShader.h  GeomObject.cc  GeomObject.h  GetDPHelper.cc  GetDPHelper.h  GetdpObject.cc  GetdpObject.h  (+72 more)
src/bzmagPy/: CMakeLists.txt  main.cc  platform.h  python_common.cc  python_extension.h  python_func.cc  python_node.cc  python_object.cc  pythonscriptserver.cc  pythonscriptserver.h
src/core/: CMakeLists.txt  autoreleasepool.cc  autoreleasepool.h  builtinmodule.cc  builtinmodule.h  color.cc  color.h  compositeproperty.h  compositeproperty.inl  compositepropertybinder.h  compositepropertybinder.inl  containerproperty.h  containerproperty.inl  currentsnapshot.h  currentsnapshot.inl  cwnguard.cc  cwnguard.h  dataset.h  define.h  enumeration.h  enumproperty.h  enumproperty.inl  enumpropertybinder.h  enumpropertybinder.inl  exception.cc  exception.h  kernel.cc  kernel.h  kernel.inl  main.cc  method.h  method.inl  methodbinder.h  methodbinder.inl  methods.h  module.cc  module.h  module.inl  node.cc  node.h  (+77 more)
src/engine/: BCNode.cc  BCNode.h  BCNode_method.cc  CMakeLists.txt  CSNode.cc  CSNode.h  CSNode.inl  CSNode_method.cc  CoilNode.cc  CoilNode.h  CoilNode.inl  CoilNode_method.cc  DataSetNode.cc  DataSetNode.h  DataSetNode_method.cc  DirichletBCNode.cc  DirichletBCNode.h  EngineNodeStringConverter.h  Expression.cc  Expression.h  Expression.inl  ExpressionServer.cc  ExpressionServer.h  Expression_method.cc  GMshDataStructure.h  GeomBandNode.cc  GeomBandNode.h  GeomBandNode.inl  GeomBandNode_method.cc  GeomBaseNode.cc  GeomBaseNode.h  GeomBaseNode_method.cc  GeomBooleanNode.cc  GeomBooleanNode.h  GeomCircleNode.cc  GeomCircleNode.h  GeomCircleNode.inl  GeomCircleNode_method.cc  GeomClonefromNode.cc  GeomClonefromNode.h  (+85 more)
src/qtpropertybrowser/: CMakeLists.txt  qtpropertybrowser.pri  qtpropertybrowser.pro
template/: template_pmsm.json
